Fix Week 1 CSS and add scrollable slides functionality
- Added all missing CSS files for Week 1 materials
- Implemented enhanced scrolling for all reveal.js slides
- Added scroll indicators for slides with overflow content
- Fixed the issue where content was cut off at slide bottom
- Added JavaScript for improved scroll behavior
- Updated all 12 slide decks with new scrolling capability
- Slides now properly handle long content with smooth scrolling
- Added visual scrollbars and scroll indicators

--- a/week01/lecture-slides.html
+++ b/week01/lecture-slides.html
@@ -390,6 +390,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -959,6 +960,7 @@ Dr.&nbsp;Smith
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1336,4 +1338,5 @@ Dr.&nbsp;Smith
     </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
