--- a/week03/lecture-slides.html
+++ b/week03/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1127,6 +1128,7 @@ Active Routes:
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1484,4 +1486,5 @@ Active Routes:
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
