--- a/week04/lecture-slides.html
+++ b/week04/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1278,6 +1279,7 @@ Test Case 5: Revenue=75000, Costs=80000
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1635,4 +1637,5 @@ Test Case 5: Revenue=75000, Costs=80000
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
