--- a/week05/lecture-slides.html
+++ b/week05/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1451,6 +1452,7 @@ Revenue Range: $83,557.92</code></pre>
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1808,4 +1810,5 @@ Revenue Range: $83,557.92</code></pre>
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
