--- a/week07/lecture-slides.html
+++ b/week07/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1804,6 +1805,7 @@ Churn Risk Analysis:
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -2161,4 +2163,5 @@ Churn Risk Analysis:
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
