--- a/week09/lecture-slides.html
+++ b/week09/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1191,6 +1192,7 @@ Correlation Insights:
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1548,4 +1550,5 @@ Correlation Insights:
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
