--- a/week10/lecture-slides.html
+++ b/week10/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1434,6 +1435,7 @@ SAMPLE SIZE RECOMMENDATIONS:
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1791,4 +1793,5 @@ SAMPLE SIZE RECOMMENDATIONS:
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
