--- a/week11/lecture-slides.html
+++ b/week11/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1217,6 +1218,7 @@ FEATURE COLLECTION PRIORITIES:
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1574,4 +1576,5 @@ FEATURE COLLECTION PRIORITIES:
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
