--- a/week12/lecture-slides.html
+++ b/week12/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1208,6 +1209,7 @@ Monitoring Recommendations:
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1565,4 +1567,5 @@ Monitoring Recommendations:
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
