--- a/week02/lecture-slides.html
+++ b/week02/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -958,6 +959,7 @@ High value sales: ['Laptop', 'Keyboard', 'Monitor']</code></pre>
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1315,4 +1317,5 @@ High value sales: ['Laptop', 'Keyboard', 'Monitor']</code></pre>
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
