--- a/week08/lecture-slides.html
+++ b/week08/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -1410,6 +1411,7 @@ Best Growth Month: Jun (21.6%)
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -1767,4 +1769,5 @@ Best Growth Month: Jun (21.6%)
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
