--- a/week13/lecture-slides.html
+++ b/week13/lecture-slides.html
@@ -192,6 +192,7 @@
       margin-right: 0; 
     }
   </style>
+<link rel="stylesheet" href="../css/reveal-scroll.css">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -2121,6 +2122,7 @@ Focus on understanding WHY we use each technique, not just HOW.</code></pre>
       // Full list of configuration options available at:
       // https://revealjs.com/config/
       Reveal.initialize({
+    scrollable: true,
 'controlsAuto': true,
 'previewLinksAuto': false,
 'pdfSeparateFragments': false,
@@ -2478,4 +2480,5 @@ Focus on understanding WHY we use each technique, not just HOW.</code></pre>
       </script>
     
 
+<script src="../js/reveal-scroll.js"></script>
 </body></html>
