Update index.html URLs to use consistent problem-set.html and problem-set-solutions.html naming

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week01/practice-problems.html" class="material-link">
+                    <a href="week01/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
-                    <a href="week01/solutions.html" class="material-link">
+                    <a href="week01/problem-set-solutions.html" class="material-link">
                         <i class="fas fa-check-circle material-icon"></i>
                         <span>Solutions</span>
                     </a>
@@ -272,11 +272,11 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week02/practice-problems.html" class="material-link">
+                    <a href="week02/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
-                    <a href="week02/solutions.html" class="material-link">
+                    <a href="week02/problem-set-solutions.html" class="material-link">
                         <i class="fas fa-check-circle material-icon"></i>
                         <span>Solutions</span>
                     </a>
@@ -306,11 +306,11 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week03/practice-problems.html" class="material-link">
+                    <a href="week03/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
-                    <a href="week03/solutions.html" class="material-link">
+                    <a href="week03/problem-set-solutions.html" class="material-link">
                         <i class="fas fa-check-circle material-icon"></i>
                         <span>Solutions</span>
                     </a>
@@ -344,7 +344,7 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week04/practice-problems.html" class="material-link">
+                    <a href="week04/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
@@ -378,7 +378,7 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week05/practice-problems.html" class="material-link">
+                    <a href="week05/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
@@ -434,7 +434,7 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week07/practice-problems.html" class="material-link">
+                    <a href="week07/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
@@ -468,7 +468,7 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week08/practice-problems.html" class="material-link">
+                    <a href="week08/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
@@ -502,11 +502,11 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week09/practice-problems.html" class="material-link">
+                    <a href="week09/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
-                    <a href="week09/solutions.html" class="material-link">
+                    <a href="week09/problem-set-solutions.html" class="material-link">
                         <i class="fas fa-check-circle material-icon"></i>
                         <span>Solutions</span>
                     </a>
@@ -536,7 +536,7 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week10/practice-problems.html" class="material-link">
+                    <a href="week10/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
@@ -566,11 +566,11 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week11/practice-problems.html" class="material-link">
+                    <a href="week11/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
-                    <a href="week11/solutions.html" class="material-link">
+                    <a href="week11/problem-set-solutions.html" class="material-link">
                         <i class="fas fa-check-circle material-icon"></i>
                         <span>Solutions</span>
                     </a>
@@ -600,11 +600,11 @@
                         <i class="fas fa-tasks material-icon"></i>
                         <span>Assignment</span>
                     </a>
-                    <a href="week12/practice-problems.html" class="material-link">
+                    <a href="week12/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
-                    <a href="week12/solutions.html" class="material-link">
+                    <a href="week12/problem-set-solutions.html" class="material-link">
                         <i class="fas fa-check-circle material-icon"></i>
                         <span>Solutions</span>
                     </a>
@@ -660,7 +660,7 @@
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Review Problems</span>
                     </a>
-                    <a href="week14/solutions.html" class="material-link">
+                    <a href="week14/problem-set-solutions.html" class="material-link">
                         <i class="fas fa-check-circle material-icon"></i>
                         <span>Solutions</span>
                     </a>
