--- a/index.html
+++ b/index.html
@@ -472,6 +472,10 @@
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
                     </a>
+                    <a href="week08/problem-set-solutions.html" class="material-link">
+                        <i class="fas fa-check-circle material-icon"></i>
+                        <span>Solutions</span>
+                    </a>
                     <a href="week08/case-study.html" class="material-link">
                         <i class="fas fa-briefcase material-icon"></i>
                         <span>Case Study</span>
@@ -565,6 +569,10 @@
                     <a href="week11/problem-set.html" class="material-link">
                         <i class="fas fa-puzzle-piece material-icon"></i>
                         <span>Practice Problems</span>
+                    </a>
+                    <a href="week11/problem-set-solutions.html" class="material-link">
+                        <i class="fas fa-check-circle material-icon"></i>
+                        <span>Solutions</span>
                     </a>
                 </div>
             </div>
