Fix course number from ISM2411 to ISM4641 across all files
- Updated all HTML files to show ISM4641 Python for Business Analytics
- Fixed template in source repository and regenerated all content
- Ensures consistency across all course materials

--- a/week03/practice-problems.html
+++ b/week03/practice-problems.html
@@ -2382,7 +2382,7 @@ if (window.self !== window.top) {
       <div class="course-header-info">
         <div class="course-meta-row">
           <span class="course-label">Course:</span>
-          <span class="course-value">ISM2411 Python for Business</span>
+          <span class="course-value">ISM4641 Python for Business Analytics</span>
         </div>
         
         <div class="author-meta-row">
